--- a/bio.html
+++ b/bio.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+
+<link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
 
@@ -15,6 +18,10 @@
 	</ul>
 
 <h1>Emily Schroeder</h1>
+
+<a href="">link</a>
+<a href="">link</a>
+<a href="">link</a>
 
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, nulla, soluta, est, dignissimos nesciunt fuga earum sunt amet facere repellat cupiditate provident ratione deleniti quasi doloremque nam repellendus. Aliquam, quasi.</p>
 
