--- a/bio.html
+++ b/bio.html
@@ -12,9 +12,9 @@
 <h1>Bio</h1>
 
 	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="bio.html">Bio</a></li>
-		<li><a href="resume.html">Resume</a></li>
+		<li><a href="index.html">&#10057;Home</a></li>
+		<li><a href="bio.html">&#10057;Bio</a></li>
+		<li><a href="resume.html">&#10057;Resume</a></li>
 	</ul>
 
 <h1>Emily Schroeder</h1>
